--- a/BosApi/BosApi.csproj
+++ b/BosApi/BosApi.csproj
@@ -4,6 +4,30 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>BOS API client</Title>
+    <Authors>khaydarovR</Authors>
+    <Description>Библиотека для безопасной работы с API менеджера секретов Bank Of Secrets (BOS), с поддержкой RSA шифрования</Description>
+    <PackageProjectUrl>https://github.com/khaydarovR/BosClient/wiki</PackageProjectUrl>
+    <PackageIcon>Снимок экрана 2023-12-16 124428.png</PackageIcon>
+    <PackageTags>BOS</PackageTags>
+    <PackageReleaseNotes>- Возможность получения секретов в зашифрованном виде
+- Расшифровка секрета на стороне клиента</PackageReleaseNotes>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.1</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\Снимок экрана 2023-12-16 124428.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+  </ItemGroup>
 
 </Project>
